--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rainbow-log",
+  "name": "rainbow-logr",
   "version": "1.0.0",
   "description": "A library for coloring console logs",
   "main": "lib/index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Avinash905/rainbow-log.git"
+    "url": "https://github.com/Avinash905/rainbow-logr.git"
   },
   "keywords": [
     "console",
@@ -35,9 +35,9 @@
   "author": "Dunna Avinash <avinash.90527@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Avinash905/rainbow-log/issues"
+    "url": "https://github.com/Avinash905/rainbow-logr/issues"
   },
-  "homepage": "https://github.com/Avinash905/rainbow-log#readme",
+  "homepage": "https://github.com/Avinash905/rainbow-logr#readme",
   "devDependencies": {
     "typescript": "^5.1.6"
   },
